<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/preference_category_notifications_title">

        <SwitchPreference
            app:key="APP_NOTIFICATIONS"
            app:title="@string/preference_notifications_title"
            app:summary="@string/preference_notifications_description"
            app:icon="@drawable/ic_notifications_active_black_24dp" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/preference_category_misc_title">
        <SwitchPreference
            app:key="APP_DESIGN_DARK"
            app:title="@string/preference_design_dark_title"
            app:summaryOn="@string/preference_design_dark_description_on"
            app:summaryOff="@string/preference_design_dark_description_off"
            app:icon="@drawable/ic_lightbulb_outline_black_24dp" />

        <Preference
            app:key="intro"
            app:title="@string/preference_intro_title"
            app:summary="@string/preference_intro_description"
            app:icon="@drawable/ic_baseline_emoji_people_24" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/preference_category_about_title">

        <Preference
            app:key="feedback"
            app:title="@string/preference_feedback_title"
            app:summary="@string/preference_feedback_description"
            app:icon="@drawable/ic_mail_black_24dp" />

        <Preference
            app:key="build"
            app:title="@string/preference_build_title"
            app:summary="@string/preference_build_description"
            app:icon="@drawable/ic_build_black_24dp" />

        <Preference
            app:key="privacyPolicy"
            app:title="@string/preference_privacy_policy_title"
            app:summary="@string/preference_privacy_policy_description"
            app:icon="@drawable/ic_baseline_policy_24" />

        <Preference
            app:key="imprint"
            app:title="@string/preference_imprint_title"
            app:summary="@string/preference_imprint_description"
            app:icon="@drawable/ic_baseline_book_24" />

        <Preference
            app:key="about"
            app:title="@string/preference_about_title"
            app:icon="@drawable/ic_info_black_24dp" />

    </PreferenceCategory>

    <PreferenceCategory app:title="Account">
        <Preference
            app:key="class"
            app:title="@string/preference_class_title"
            app:summary="@string/preference_class_description"
            app:icon="@drawable/ic_group_black_24dp" />

        <Preference
            app:key="logout"
            app:title="@string/preference_logout_title"
            app:summary="@string/preference_logout_description"
            app:icon="@drawable/ic_cancel_black_24dp" />
    </PreferenceCategory>

</PreferenceScreen>