<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Developed by Sebastian Müller and Luis Bros.
  ~ Last updated: 04.07.21, 16:59.
  ~ Copyright (c) 2021 EffnerApp.
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".ui.activities.login.TeacherLoginActivity">

    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="48dp"
        android:enabled="true"
        android:text="@string/button_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_teacher_id" />

    <EditText
        android:id="@+id/input_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="220dp"
        android:layout_marginEnd="24dp"

        android:hint="@string/input_id_hint"
        android:importantForAutofill="no"
        android:inputType="number"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/input_teacher_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="16dp"
        android:hint="@string/input_teacher_id_hint"
        android:importantForAutofill="no"
        android:inputType="text"
        android:maxLength="4"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_password" />

    <EditText
        android:id="@+id/input_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/input_password_hint"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionDone"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_id" />

    <ImageView
        android:layout_width="114dp"
        android:layout_height="117dp"
        android:contentDescription="@string/i_description_app_logo"
        app:layout_constraintBottom_toTopOf="@+id/input_id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_effnerapp_logo" />

    <TextView
        android:id="@+id/back_to_intro_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_back_to_intro"
        android:textColor="#3F51B5"
        android:selectAllOnFocus="false"
        android:linksClickable="false"
        android:autoLink="all"
        android:textAllCaps="false"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/student_login_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autoLink="all"
        android:linksClickable="false"
        android:selectAllOnFocus="false"
        android:text="@string/button_login_students"
        android:textAllCaps="false"
        android:textColor="#3F51B5"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>