<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Developed by Sebastian Müller and Luis Bros.
  ~ Last updated: 12.09.21, 19:48.
  ~ Copyright (c) 2021 EffnerApp.
  ~
  -->

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="0dp">

    <ImageView
        android:id="@+id/arrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="16dp"
        android:src="@drawable/ic_keyboard_arrow_down_black_24dp"
        android:contentDescription="@string/i_description_base"
        app:tint="@color/recycler_item_color" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="?android:listPreferredItemPaddingLeft"
        android:paddingStart="40dp"
        android:paddingEnd="40dp">
        <TextView
            android:id="@+id/recycler_head_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/placeholder_substitution_head"
            android:textColor="@color/recycler_item_color"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/sub_head_badge_class"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:background="@drawable/badge_shape"
            android:backgroundTint="#009688"
            android:text="@string/placeholder_default"
            android:textAlignment="center"
            android:textColor="#FFF"
            android:textSize="16sp"
            android:textStyle="bold"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/sub_head_badge_subject"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:background="@drawable/badge_shape"
            android:backgroundTint="#3F51B5"
            android:text="@string/placeholder_default"
            android:textAlignment="center"
            android:textColor="#FFF"
            android:textSize="16sp"
            android:textStyle="bold"
            android:visibility="gone"/>
    </LinearLayout>
</FrameLayout>